--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,46 @@
 /*  your css code here. If applicable */
+body{
+	background-color: #f5f5f5;
+}
+header{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 70px;
+	background-color: #011e29;
+}
+h1{
+	color: white;
+}
+.container{
+	display: flex;
+	justify-content: space-between;
+	gap: 5px;
+	padding: 8px 30px;
+	font-size: 13px;
+}
+.div1{
+	background-color: white;
+	padding: 15px;
+	border-radius: 10px;
+	text-align: center;
+}
+.latest-news{
+	width: 350px;
+	height: 100px;
+	
+}
+.main-article{
+	width: 600px;
+	height: 150px;
+	padding: 5px;
+}
+.image{
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	padding: 15px;
+}
+img{
+	width: 150px;
+}
