--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ h1{
 	border-radius: 10px;
 	text-align: center;
 }
-.latest-news{
+.latest-news-section{
 	width: 350px;
 	height: 100px;
 	
@@ -34,7 +34,7 @@ h1{
 	height: 150px;
 	padding: 5px;
 }
-.image{
+.pictorial-news-section{
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
